--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-API_URL=https://codingwithzain.com/apis/test_os_api/api/
 WEB_CLIENT_ID=704969323158-bf61lqbceq130klnan1dqo60ippmsqf5.apps.googleusercontent.com
+
+
+API_URL=https://merionlinedukan.com/api/live/mod/
 GOOGLE_MAPS_API_KEY=AIzaSyCRZnrkNHFwMmIuHceHYCPsF27_TJ4wfKM
