add to cart pass recover

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 WEB_CLIENT_ID=704969323158-bf61lqbceq130klnan1dqo60ippmsqf5.apps.googleusercontent.com
 
 
-API_URL=https://codingwithzain.com/apis/test_os_api/api/
-GOOGLE_MAPS_API_KEY=AIzaSyBEaXgEpQZUiExityBFr_MNJJAIco57msk
+API_URL=https://merionlinedukan.com/api/live/mod/
+GOOGLE_MAPS_API_KEY=AIzaSyCRZnrkNHFwMmIuHceHYCPsF27_TJ4wfKM
